first working version. TODO: UI improvement,test

--- a/app/app.css
+++ b/app/app.css
@@ -94,3 +94,9 @@ select option {
   border-color:#507dbc;
   color:#fff;
 }
+
+/* img styles */
+.big-img {
+  display: block;
+  margin: 25px auto;
+}
