updated some UI

--- a/app/app.css
+++ b/app/app.css
@@ -35,7 +35,7 @@ color scheme for the whole site
 #DAE3E5 
 */
 
-/* background colors */
+/* background colors , container margin etc. */
 .dark-bg{
   background-color: #1c1f33;
   min-height: 300px;
@@ -45,6 +45,7 @@ color scheme for the whole site
   background-color: #a1c6ea;
   min-height: 200px;
   padding:100px 0px;
+  margin-top:100px;
 }
 .select-bg{
   background-color: #a1c6ea;
@@ -52,6 +53,9 @@ color scheme for the whole site
   margin-bottom:50px;
 }
 
+.w-margin{
+  margin-bottom:100px;
+}
 
 /* font styles */
 h1,h2,h3,h4,h5,h6,p {
@@ -62,12 +66,11 @@ h1{
   letter-spacing: 0.3rem;
 }
 
-h4 {
+h2, h4, h5 {
   color: #1c1f33;
+  margin: 15px 0px;
 }
-h5{
-  color:#1c1f33;
-}
+
 
 /* position class */
 .right{
@@ -99,4 +102,69 @@ select option {
 .big-img {
   display: block;
   margin: 25px auto;
+}
+
+/* new UI */
+.img-area {
+  display: block;
+  padding: 0px 40px 0px 50px;
+}
+
+.img-area img {
+  width: 80px;
+  height: 80px;
+}
+
+.detail-area span {
+  background-color: #1c1f33;
+  color: white;
+  font-size: 1.6rem;
+  letter-spacing: 0.3rem;
+  border-radius: 20px;
+  display: block;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.info {
+  display: block;
+  color: #1c1f33;
+  padding: 5px 0px;
+  font-size: 1.8rem;
+}
+
+.info .title {
+  display: inline-block;
+  padding-right: 8px;
+  font-weight: bold;
+  text-align: right;
+  width: 50%;
+}
+
+.info p {
+  display: inline;
+}
+
+.card {
+  margin: 5px;
+  border-radius: 5px;
+  border: 1px solid #bbd1ea;
+  box-shadow: 2px 2px 1px #888;
+}
+.card .icon {
+  display: block;
+}
+
+.card .icon h5 {
+  display: inline;
+}
+.card .bottom-card {
+  background: linear-gradient(to bottom, #fff, #bbd1ea);
+  padding: 5px 15px 20px 15px;
+}
+
+.card .bottom-card h3 {
+  text-align: center;
+  min-height: 80px;
 }
